--- a/main/main.html
+++ b/main/main.html
@@ -60,6 +60,25 @@
     </div>
   </section>
 
+  <section class="image-scroller-section">
+    <div class="scroller-container">
+      <button class="scroll-btn left" onclick="scrollImages('left')">&#10094;</button>
+      
+      <div class="image-track" id="imageTrack">
+        <img src="/image/𝐴𝑒𝑟𝑡𝑖.jpeg" alt="Image 1" class="scroller-image" />
+        <img src="/image/ᶻ 𝗓 𐰁✰.jpeg" alt="Image 2" class="scroller-image" />
+        <img src="/image/𝒊𝘭𝘺 _⠀⠀ ⠀ 𝜗ৎ⠀˓ ⠀⠀𝐥𝗎𝗎𝗎𝗲𝗲𝗲⠀⠀⠀ !⠀_.jpeg" alt="Image 3" class="scroller-image" />
+        <img src="/image/wondiê.jpeg" alt="Image 4" class="scroller-image" />
+        <!-- Add more images as needed -->
+      </div>
+  
+      <button class="scroll-btn right" onclick="scrollImages('right')">&#10095;</button>
+    </div>
+  </section>
+  
+  
+
+
   <section class="login-section">
     <div class="login-container">
       <h2>Login to Dashboard</h2>
@@ -84,6 +103,6 @@
     <a href="" target="https://github.com/sreeyutha21/cetaphil45">Sreeyutha</a>
   </p>
 
-  <script src="/admin/script.js"></script>
+  <script src="/main/script.js"></script>
 </body>
 </html>
