--- a/main/main.html
+++ b/main/main.html
@@ -25,7 +25,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/image/00971162-c4a5-4763-8f6b-2cdc79cfbd8f.jpg" alt="Real-time Tracking">
+            <img src="/image/images.jpeg" alt="Real-time Tracking">
           </div>
           <div class="flip-card-back">
             <h3>Real-time Tracking</h3>
@@ -37,7 +37,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/image/376d47c2-1688-436f-ae81-d100888d5be0.jpg" alt="Heatmap Visualization">
+            <img src="/image/The-heat-map-of-a-probability-model-of-crowds-in-the-city-of-Melbourne-A-smoothed-plot.jpg" alt="Heatmap Visualization">
           </div>
           <div class="flip-card-back">
             <h3>Heatmap Visualization</h3>
@@ -49,7 +49,7 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="/image/9c3056d0-871c-4603-95f8-037aabedabd7.jpg" alt="Smart Routing">
+            <img src="/image/1dU9-tVq8bzGoBdGQVHpfMw.jpg" alt="Smart Routing">
           </div>
           <div class="flip-card-back">
             <h3>Smart Routing</h3>
@@ -65,10 +65,14 @@
       <button class="scroll-btn left" onclick="scrollImages('left')">&#10094;</button>
       
       <div class="image-track" id="imageTrack">
-        <img src="/image/𝐴𝑒𝑟𝑡𝑖.jpeg" alt="Image 1" class="scroller-image" />
-        <img src="/image/ᶻ 𝗓 𐰁✰.jpeg" alt="Image 2" class="scroller-image" />
-        <img src="/image/𝒊𝘭𝘺 _⠀⠀ ⠀ 𝜗ৎ⠀˓ ⠀⠀𝐥𝗎𝗎𝗎𝗲𝗲𝗲⠀⠀⠀ !⠀_.jpeg" alt="Image 3" class="scroller-image" />
-        <img src="/image/wondiê.jpeg" alt="Image 4" class="scroller-image" />
+        <img src="/image/12.jpg" alt="Image 1" class="scroller-image" />
+        <img src="/image/WhatsApp Image 2025-04-21 at 14.05.26_5d61c66e.jpg" alt="Image 2" class="scroller-image" />
+        <img src="/image/WhatsApp Image 2025-04-21 at 14.05.28_79f57200.jpg" alt="Image 3" class="scroller-image" />
+        <img src="/image/WhatsApp Image 2025-04-21 at 14.05.26_befe6cbc.jpg" alt="Image 4" class="scroller-image" />
+        <img src="/image/13.jpg" alt="Image 4" class="scroller-image" />
+        <img src="/image/14.jpg" alt="Image 4" class="scroller-image" />
+        <img src="/image/15.jpg" alt="Image 4" class="scroller-image" />
+      
         <!-- Add more images as needed -->
       </div>
   
