--- a/other/dashboard.html
+++ b/other/dashboard.html
@@ -65,58 +65,59 @@
           <tr>
             <th>Name</th>
             <th>Phone Number</th>
-            <th>Location</th>
+            <th>Zone</th>
           </tr>
         </thead>
         <tbody>
           <!-- Sample data (repeat or populate dynamically) -->
-          <tr><td>Ravi Sharma</td><td>9876543210</td><td>Mumbai</td></tr>
-          <tr><td>Pooja Patel</td><td>9123456789</td><td>Delhi</td></tr>
-          <tr><td>Amit Kumar</td><td>9988776655</td><td>Bangalore</td></tr>
-          <tr><td>Sara Iyer</td><td>9112233445</td><td>Chennai</td></tr>
-          <tr><td>Rahul Mehra</td><td>9090909090</td><td>Kolkata</td></tr>
-          <tr><td>Neha Sinha</td><td>7385046888</td><td>Pune</td></tr>
-          <tr><td>Tanvi Reddy</td><td>8841830965</td><td>Hyderabad</td></tr>
-          <tr><td>Arjun Verma</td><td>8445955981</td><td>Ahmedabad</td></tr>
-          <tr><td>Sneha Kapoor</td><td>8386191260</td><td>Jaipur</td></tr>
-          <tr><td>Manoj Desai</td><td>9071418171</td><td>Surat</td></tr>
-          <tr><td>Priya Rao</td><td>8312964206</td><td>Lucknow</td></tr>
-          <tr><td>Rajeev Pillai</td><td>9639856781</td><td>Thiruvananthapuram</td></tr>
-          <tr><td>Anjali Singh</td><td>8117480514</td><td>Kanpur</td></tr>
-          <tr><td>Gaurav Joshi</td><td>8914562822</td><td>Patna</td></tr>
-          <tr><td>Sonal Dubey</td><td>8958212026</td><td>Bhopal</td></tr>
-          <tr><td>Aditya Nair</td><td>8426442521</td><td>Kochi</td></tr>
-          <tr><td>Meera Das</td><td>8086307087</td><td>Bhubaneswar</td></tr>
-          <tr><td>Karan Bhatt</td><td>8439633910</td><td>Chandigarh</td></tr>
-          <tr><td>Ritika Malhotra</td><td>8533808262</td><td>Indore</td></tr>
-          <tr><td>Vikram Chauhan</td><td>8494734796</td><td>Varanasi</td></tr>
-          <tr><td>Ishita Yadav</td><td>8213592094</td><td>Nagpur</td></tr>
-          <tr><td>Devansh Goyal</td><td>7526613204</td><td>Guwahati</td></tr>
-          <tr><td>Sanya Jain</td><td>7386027565</td><td>Rajkot</td></tr>
-          <tr><td>Rohit Saxena</td><td>7875289485</td><td>Amritsar</td></tr>
-          <tr><td>Swati Bansal</td><td>8246377680</td><td>Vadodara</td></tr>
-          <tr><td>Kartik Sharma</td><td>7416311908</td><td>Ludhiana</td></tr>
-          <tr><td>Rhea Mukherjee</td><td>7023442887</td><td>Agra</td></tr>
-          <tr><td>Yash Raj</td><td>8431135481</td><td>Jodhpur</td></tr>
-          <tr><td>Shalini Pandey</td><td>7822661779</td><td>Mysore</td></tr>
-          <tr><td>Deepak Tiwari</td><td>8651130556</td><td>Ranchi</td></tr>
-          <tr><td>Simran Choudhury</td><td>7010635198</td><td>Siliguri</td></tr>
-          <tr><td>Aniket Shetty</td><td>7657481691</td><td>Hubli</td></tr>
-          <tr><td>Vishal Shah</td><td>7990940832</td><td>Dehradun</td></tr>
-          <tr><td>Nikita George</td><td>8911952313</td><td>Gwalior</td></tr>
-          <tr><td>Rehan Sheikh</td><td>7059207635</td><td>Jabalpur</td></tr>
-          <tr><td>Smriti Mishra</td><td>6019949522</td><td>Udaipur</td></tr>
-          <tr><td>Sachin Khanna</td><td>7732204454</td><td>Jamshedpur</td></tr>
-          <tr><td>Kavya Pillai</td><td>6827073983</td><td>Ajmer</td></tr>
-          <tr><td>Dhruv Rao</td><td>7167406031</td><td>Noida</td></tr>
-          <tr><td>Bhavya Shukla</td><td>6158877204</td><td>Ghaziabad</td></tr>
-          <tr><td>Ayush Raut</td><td>7407060284</td><td>Faridabad</td></tr>
-          <tr><td>Ananya Batra</td><td>6399613015</td><td>Meerut</td></tr>
-          <tr><td>Rohini Iyer</td><td>7605591031</td><td>Panaji</td></tr>
-          <tr><td>Abhishek Das</td><td>7489983989</td><td>Shimla</td></tr>
-          <tr><td>Kritika Rathi</td><td>6561881013</td><td>Haridwar</td></tr>
-          <tr><td>Siddharth Menon</td><td>7252905281</td><td>Thrissur</td></tr>
-          <tr><td>Anusha Reddy</td><td>8323142690</td><td>Warangal</td></tr>
+          <tr><td>Ravi Sharma</td><td>9876543210</td><td>Zone 2</td></tr>
+<tr><td>Pooja Patel</td><td>9123456789</td><td>Zone 1</td></tr>
+<tr><td>Amit Kumar</td><td>9988776655</td><td>Zone 3</td></tr>
+<tr><td>Sara Iyer</td><td>9112233445</td><td>Zone 2</td></tr>
+<tr><td>Rahul Mehra</td><td>9090909090</td><td>Zone 1</td></tr>
+<tr><td>Neha Sinha</td><td>7385046888</td><td>Zone 3</td></tr>
+<tr><td>Tanvi Reddy</td><td>8841830965</td><td>Zone 1</td></tr>
+<tr><td>Arjun Verma</td><td>8445955981</td><td>Zone 3</td></tr>
+<tr><td>Sneha Kapoor</td><td>8386191260</td><td>Zone 2</td></tr>
+<tr><td>Manoj Desai</td><td>9071418171</td><td>Zone 1</td></tr>
+<tr><td>Priya Rao</td><td>8312964206</td><td>Zone 2</td></tr>
+<tr><td>Rajeev Pillai</td><td>9639856781</td><td>Zone 3</td></tr>
+<tr><td>Anjali Singh</td><td>8117480514</td><td>Zone 1</td></tr>
+<tr><td>Gaurav Joshi</td><td>8914562822</td><td>Zone 2</td></tr>
+<tr><td>Sonal Dubey</td><td>8958212026</td><td>Zone 3</td></tr>
+<tr><td>Aditya Nair</td><td>8426442521</td><td>Zone 2</td></tr>
+<tr><td>Meera Das</td><td>8086307087</td><td>Zone 1</td></tr>
+<tr><td>Karan Bhatt</td><td>8439633910</td><td>Zone 3</td></tr>
+<tr><td>Ritika Malhotra</td><td>8533808262</td><td>Zone 1</td></tr>
+<tr><td>Vikram Chauhan</td><td>8494734796</td><td>Zone 2</td></tr>
+<tr><td>Ishita Yadav</td><td>8213592094</td><td>Zone 3</td></tr>
+<tr><td>Devansh Goyal</td><td>7526613204</td><td>Zone 1</td></tr>
+<tr><td>Sanya Jain</td><td>7386027565</td><td>Zone 2</td></tr>
+<tr><td>Rohit Saxena</td><td>7875289485</td><td>Zone 3</td></tr>
+<tr><td>Swati Bansal</td><td>8246377680</td><td>Zone 1</td></tr>
+<tr><td>Kartik Sharma</td><td>7416311908</td><td>Zone 2</td></tr>
+<tr><td>Rhea Mukherjee</td><td>7023442887</td><td>Zone 3</td></tr>
+<tr><td>Yash Raj</td><td>8431135481</td><td>Zone 1</td></tr>
+<tr><td>Shalini Pandey</td><td>7822661779</td><td>Zone 2</td></tr>
+<tr><td>Deepak Tiwari</td><td>8651130556</td><td>Zone 3</td></tr>
+<tr><td>Simran Choudhury</td><td>7010635198</td><td>Zone 1</td></tr>
+<tr><td>Aniket Shetty</td><td>7657481691</td><td>Zone 2</td></tr>
+<tr><td>Vishal Shah</td><td>7990940832</td><td>Zone 3</td></tr>
+<tr><td>Nikita George</td><td>8911952313</td><td>Zone 1</td></tr>
+<tr><td>Rehan Sheikh</td><td>7059207635</td><td>Zone 2</td></tr>
+<tr><td>Smriti Mishra</td><td>6019949522</td><td>Zone 3</td></tr>
+<tr><td>Sachin Khanna</td><td>7732204454</td><td>Zone 1</td></tr>
+<tr><td>Kavya Pillai</td><td>6827073983</td><td>Zone 2</td></tr>
+<tr><td>Dhruv Rao</td><td>7167406031</td><td>Zone 3</td></tr>
+<tr><td>Bhavya Shukla</td><td>6158877204</td><td>Zone 1</td></tr>
+<tr><td>Ayush Raut</td><td>7407060284</td><td>Zone 2</td></tr>
+<tr><td>Ananya Batra</td><td>6399613015</td><td>Zone 3</td></tr>
+<tr><td>Rohini Iyer</td><td>7605591031</td><td>Zone 1</td></tr>
+<tr><td>Abhishek Das</td><td>7489983989</td><td>Zone 2</td></tr>
+<tr><td>Kritika Rathi</td><td>6561881013</td><td>Zone 3</td></tr>
+<tr><td>Siddharth Menon</td><td>7252905281</td><td>Zone 1</td></tr>
+<tr><td>Anusha Reddy</td><td>8323142690</td><td>Zone 2</td></tr>
+
           
 
         </tbody>
